# bazel-monorepo-reference

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  go.mod
.github/workflows/: ci.yml  determinism-check.yml
apps/c-lib/: BUILD.bazel  greet.c  greet.h  greet_test.c
apps/cpp-lib/: BUILD.bazel  greeter.cc  greeter.h  greeter_test.cc
apps/go-service/: BUILD.bazel  main.go
apps/java-app/: BUILD.bazel
apps/java-app/src/main/java/com/example/: Greeter.java
apps/java-app/src/test/java/com/example/: GreeterTest.java
apps/python-lib/: BUILD.bazel  greeter.py  greeter_test.py
apps/ts-app/: BUILD.bazel  package.json  tsconfig.json
apps/ts-app/src/: greeter.test.ts  greeter.ts
bazel/: BUILD.bazel  defs.bzl  rules.bzl
caching/01-local-disk/: README.md  bazelrc.snippet  demo.sh
caching/02-bazel-remote/: README.md  bazelrc.snippet  docker-compose.yml
caching/03-buildbuddy/: README.md  bazelrc.snippet
caching/04-gcs/: README.md  bazelrc.snippet  setup.sh
docs/: bazel-concepts.md  caching.md  determinism-checker-design.md  monorepo-patterns.md  query-examples.md  rbe.md
libs/: BUILD.bazel
libs/common/: BUILD.bazel  version.cc  version.h
proto/: BUILD.bazel  greeter.proto
rbe/01-buildbuddy-rbe/: README.md  bazelrc.snippet
rbe/02-buildbarn/: README.md  bazelrc.snippet  docker-compose.yml
rbe/03-engflow/: README.md  bazelrc.snippet
stamp/: BUILD.bazel  workspace_status.sh
tools/: BUILD.bazel
tools/determinism/: BUILD.bazel  dynamic_check.sh  static_check.py  summarize.py
