load("@gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/suhalvemu/bazel-monorepo-reference
#
# Run `bazel run //:gazelle` to auto-generate/update Go BUILD files.
# Run `bazel run //:gazelle -- -mode=diff` to preview changes without applying them.
# Gazelle only manages Go rules; cc_library, py_library etc. are left untouched.
gazelle(name = "gazelle")
