load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_go//proto:def.bzl", "go_proto_library")

# Language-agnostic proto target — all language targets derive from this.
# One .proto file, multiple language outputs — no duplication, guaranteed consistency.
proto_library(
    name = "greeter_proto",
    srcs = ["greeter.proto"],
    visibility = ["//visibility:public"],
)

# C++ — cc_proto_library is a native Bazel rule (no load needed).
# Generates greeter.pb.h and greeter.pb.cc from greeter.proto.
cc_proto_library(
    name = "greeter_cc_proto",
    deps = [":greeter_proto"],
    visibility = ["//visibility:public"],
)

# Java — java_proto_library is a native Bazel rule.
# Generates a JAR with protobuf Java classes.
java_proto_library(
    name = "greeter_java_proto",
    deps = [":greeter_proto"],
    visibility = ["//visibility:public"],
)

# Go — requires option go_package in greeter.proto.
# importpath must match the go_package option value.
go_proto_library(
    name = "greeter_go_proto",
    importpath = "github.com/suhalvemu/bazel-cache-rbe-examples/proto",
    proto = ":greeter_proto",
    visibility = ["//visibility:public"],
)
