load("@rules_java//java:defs.bzl", "java_binary", "java_test")

java_binary(
    name = "greeter-app",
    srcs = ["src/main/java/com/example/Greeter.java"],
    main_class = "com.example.Greeter",
    visibility = ["//visibility:public"],
)

# java_test with main_class runs the test as a binary — no external test framework.
# Bazel provides the remote JDK via --java_runtime_version=remotejdk_21 in .bazelrc.
# No local JRE required: fully hermetic.
java_test(
    name = "greeter_test",
    srcs = [
        "src/main/java/com/example/Greeter.java",
        "src/test/java/com/example/GreeterTest.java",
    ],
    main_class = "com.example.GreeterTest",
    test_class = "com.example.GreeterTest",
    jvm_flags = ["-ea"],  # enable assertions
    use_testrunner = False,
)
